--- a/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
+++ b/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RzW-Uh-ojm">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="RzW-Uh-ojm">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,12 +16,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Gzx-2j-BOY">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="brm-Uf-dgf" detailTextLabel="udp-c0-Ahv" style="IBUITableViewCellStyleSubtitle" id="Gzx-2j-BOY">
                                 <rect key="frame" x="0.0" y="92" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gzx-2j-BOY" id="jys-lM-aJJ">
                                     <frame key="frameInset" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="brm-Uf-dgf">
+                                            <frame key="frameInset" minX="15" minY="4" width="34" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="udp-c0-Ahv">
+                                            <frame key="frameInset" minX="15" minY="25" width="44" height="15"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -30,10 +47,95 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="d3M-LG-Oge"/>
+                    <connections>
+                        <segue destination="JCX-YV-C1R" kind="show" identifier="showView" id="mbE-Dx-aib"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Orb-fK-tUO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1012" y="160"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="Nx0-YZ-VZl">
+            <objects>
+                <viewController id="JCX-YV-C1R" customClass="DetailViewController" customModule="AC3_2_GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="eI0-su-dGG"/>
+                        <viewControllerLayoutGuide type="bottom" id="Lvj-kx-eJp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tca-gJ-JHN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hjR-lN-cs3">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="195" id="ZvD-kR-ckq"/>
+                                    <constraint firstAttribute="width" constant="343" id="kkh-Sy-SAw"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oPc-i6-wH2">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="246" id="J38-mC-mum"/>
+                                    <constraint firstAttribute="width" constant="343" id="qzt-7e-Xcq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Season" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="joP-ZI-WA9">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="117" id="UTJ-SL-Wvg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Number" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c1N-Lk-deM">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="vDG-mi-Tcy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IH1-hd-gKG">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="1A4-Jg-IBR"/>
+                                    <constraint firstAttribute="width" constant="88" id="aYP-cN-Jt3"/>
+                                </constraints>
+                                <state key="normal" title="Link"/>
+                                <connections>
+                                    <action selector="link:" destination="JCX-YV-C1R" eventType="touchUpInside" id="QSG-3A-uxT"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="oPc-i6-wH2" firstAttribute="leading" secondItem="tca-gJ-JHN" secondAttribute="leadingMargin" id="4aN-eB-ndi"/>
+                            <constraint firstItem="joP-ZI-WA9" firstAttribute="leading" secondItem="tca-gJ-JHN" secondAttribute="leadingMargin" id="4yn-8J-em5"/>
+                            <constraint firstItem="c1N-Lk-deM" firstAttribute="top" secondItem="hjR-lN-cs3" secondAttribute="bottom" constant="8" id="8rr-so-fv7"/>
+                            <constraint firstItem="IH1-hd-gKG" firstAttribute="top" secondItem="oPc-i6-wH2" secondAttribute="bottom" constant="35" id="BYf-UR-Gim"/>
+                            <constraint firstItem="c1N-Lk-deM" firstAttribute="trailing" secondItem="tca-gJ-JHN" secondAttribute="trailingMargin" id="R5V-Ma-adx"/>
+                            <constraint firstItem="hjR-lN-cs3" firstAttribute="leading" secondItem="tca-gJ-JHN" secondAttribute="leadingMargin" id="RTn-Rj-0Cn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IH1-hd-gKG" secondAttribute="trailing" constant="128" id="ReM-it-0xH"/>
+                            <constraint firstItem="joP-ZI-WA9" firstAttribute="top" secondItem="hjR-lN-cs3" secondAttribute="bottom" constant="8" id="bnJ-Fb-nWd"/>
+                            <constraint firstItem="hjR-lN-cs3" firstAttribute="top" secondItem="eI0-su-dGG" secondAttribute="bottom" constant="8" id="cM1-iZ-xz2"/>
+                            <constraint firstItem="IH1-hd-gKG" firstAttribute="leading" secondItem="tca-gJ-JHN" secondAttribute="leadingMargin" constant="127" id="cff-Sj-yza"/>
+                            <constraint firstItem="oPc-i6-wH2" firstAttribute="top" secondItem="c1N-Lk-deM" secondAttribute="bottom" constant="8" id="svy-Xf-UJC"/>
+                            <constraint firstItem="oPc-i6-wH2" firstAttribute="trailing" secondItem="tca-gJ-JHN" secondAttribute="trailingMargin" id="uD9-eM-TxV"/>
+                            <constraint firstItem="hjR-lN-cs3" firstAttribute="trailing" secondItem="tca-gJ-JHN" secondAttribute="trailingMargin" id="vGR-Q9-amG"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="homeImage" destination="hjR-lN-cs3" id="AIM-rl-1wm"/>
+                        <outlet property="number" destination="c1N-Lk-deM" id="6EY-Q2-NnQ"/>
+                        <outlet property="season" destination="joP-ZI-WA9" id="gjV-0M-RsT"/>
+                        <outlet property="summaryLabel" destination="oPc-i6-wH2" id="mSJ-VC-7Tb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qcD-nm-pHl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1733.5999999999999" y="158.77061469265368"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KzA-EL-rAA">
