--- a/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
+++ b/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
@@ -3,10 +3,11 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Game of Thrones Episodes-->
         <scene sceneID="sjx-cT-F0W">
             <objects>
                 <tableViewController id="W4q-qE-EWG" customClass="GameOfThronesTableViewController" customModule="AC3_2_GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
@@ -15,13 +16,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Gzx-2j-BOY">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" textLabel="tnn-fq-Lve" detailTextLabel="ZpA-LZ-Wt8" style="IBUITableViewCellStyleSubtitle" id="Gzx-2j-BOY">
                                 <rect key="frame" x="0.0" y="92" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gzx-2j-BOY" id="jys-lM-aJJ">
                                     <frame key="frameInset" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tnn-fq-Lve">
+                                            <frame key="frameInset" minX="15" minY="4" width="34" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZpA-LZ-Wt8">
+                                            <frame key="frameInset" minX="15" minY="25" width="44" height="15"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="CfY-hS-pRu" kind="show" identifier="toDetailSegue" id="oy7-wd-gZm"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -29,11 +49,89 @@
                             <outlet property="delegate" destination="W4q-qE-EWG" id="T33-lT-J3o"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="d3M-LG-Oge"/>
+                    <navigationItem key="navigationItem" title="Game of Thrones Episodes" id="d3M-LG-Oge"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Orb-fK-tUO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1012" y="160"/>
+        </scene>
+        <!--Epidode Detail View Controller-->
+        <scene sceneID="D7J-KD-ttv">
+            <objects>
+                <viewController id="CfY-hS-pRu" customClass="EpidodeDetailViewController" customModule="AC3_2_GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cxS-7F-Nw7"/>
+                        <viewControllerLayoutGuide type="bottom" id="HP3-0K-zKd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Bnl-zB-s0x">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aOX-JP-xfl">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="7kU-ia-U83"/>
+                                    <constraint firstAttribute="width" constant="240" id="T3k-LQ-jKr"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YVo-HJ-mS8">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode Number" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="feB-6j-oNY">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode Runtime" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EPa-BN-LlF">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode Season" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w6e-QX-fl5">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode Summary" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YZK-a1-ncX">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="EPa-BN-LlF" secondAttribute="trailing" id="3TS-7H-eJA"/>
+                            <constraint firstItem="w6e-QX-fl5" firstAttribute="top" secondItem="EPa-BN-LlF" secondAttribute="bottom" constant="10" id="5IV-K8-s4i"/>
+                            <constraint firstItem="EPa-BN-LlF" firstAttribute="top" secondItem="feB-6j-oNY" secondAttribute="bottom" constant="10" id="B5j-Zo-9Sy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="feB-6j-oNY" secondAttribute="trailing" id="JR8-VO-i3m"/>
+                            <constraint firstItem="w6e-QX-fl5" firstAttribute="leading" secondItem="Bnl-zB-s0x" secondAttribute="leadingMargin" id="LLS-hs-k3p"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="w6e-QX-fl5" secondAttribute="trailing" id="Nhc-ph-8qJ"/>
+                            <constraint firstItem="aOX-JP-xfl" firstAttribute="top" secondItem="cxS-7F-Nw7" secondAttribute="bottom" constant="8" id="Qo2-4t-Gws"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="YZK-a1-ncX" secondAttribute="trailing" id="RTW-oF-qo0"/>
+                            <constraint firstItem="YZK-a1-ncX" firstAttribute="top" secondItem="w6e-QX-fl5" secondAttribute="bottom" constant="10" id="Sz5-2y-09q"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="YZK-a1-ncX" secondAttribute="leading" id="ZKK-EK-3Kb"/>
+                            <constraint firstItem="feB-6j-oNY" firstAttribute="leading" secondItem="Bnl-zB-s0x" secondAttribute="leadingMargin" id="ahv-aY-qBL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="YVo-HJ-mS8" secondAttribute="trailing" id="h2R-CF-tyj"/>
+                            <constraint firstItem="EPa-BN-LlF" firstAttribute="leading" secondItem="Bnl-zB-s0x" secondAttribute="leadingMargin" id="lNv-W5-uro"/>
+                            <constraint firstItem="YVo-HJ-mS8" firstAttribute="top" secondItem="aOX-JP-xfl" secondAttribute="bottom" constant="10" id="moo-Ic-YPS"/>
+                            <constraint firstItem="feB-6j-oNY" firstAttribute="top" secondItem="YVo-HJ-mS8" secondAttribute="bottom" constant="10" id="oX8-jO-agy"/>
+                            <constraint firstItem="aOX-JP-xfl" firstAttribute="centerX" secondItem="Bnl-zB-s0x" secondAttribute="centerX" id="wOV-Za-52B"/>
+                            <constraint firstItem="YVo-HJ-mS8" firstAttribute="leading" secondItem="Bnl-zB-s0x" secondAttribute="leadingMargin" id="zK7-VN-FVL"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="episodeName" destination="YVo-HJ-mS8" id="qbN-cS-nbc"/>
+                        <outlet property="episodeNumber" destination="feB-6j-oNY" id="IbD-aI-RcB"/>
+                        <outlet property="episodeRuntime" destination="EPa-BN-LlF" id="btS-tw-Y3m"/>
+                        <outlet property="episodeSeason" destination="w6e-QX-fl5" id="2BV-74-mWj"/>
+                        <outlet property="episodeSummary" destination="YZK-a1-ncX" id="xsc-d6-V0g"/>
+                        <outlet property="seasonImage" destination="aOX-JP-xfl" id="JD9-mH-RN8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k8o-IY-H7i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1941.5999999999999" y="158.77061469265368"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KzA-EL-rAA">
